--- a/movie_dataset/readme
+++ b/movie_dataset/readme
@@ -1,1 +1,3 @@
-https://drive.google.com/drive/folders/1K60Sfuzm4ZqPfjt-tUPIKiCs5dLvpucw?usp=sharing ссылка на данные в диске
+https://drive.google.com/drive/folders/1K60Sfuzm4ZqPfjt-tUPIKiCs5dLvpucw?usp=sharing ссылка на данные в гугл диске.
+Примечание. В гугл диске в файле full_df trailer_path указан для папки trailers через путь drive/My_drive...
+Если вы отдельно скачиваете папку trailers, то тут лежит файл full_df, в котором путь к трейлеру определяется через папку trailers/..
